<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".view.ChangeLanguageActivity">

    <TextView
        android:id="@+id/tv_lbl_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/change_language"
        android:textColor="#3F51B5"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_lbl_change_language"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/tv_lbl_change_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_change_language">

        <RadioButton
            android:id="@+id/rd_english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/english_lang"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd_indonesia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indonesia_lang"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_change_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_change_language"
        android:layout_marginTop="8dp"
        android:text="@string/apply_change"
        app:layout_constraintEnd_toEndOf="@+id/tv_lbl_change_language"
        app:layout_constraintStart_toStartOf="@+id/tv_lbl_change_language"
        app:layout_constraintTop_toBottomOf="@+id/rg_change_language" />

</androidx.constraintlayout.widget.ConstraintLayout>